Fix main page aligning and minor bugs

--- a/src/styles/core.styl
+++ b/src/styles/core.styl
@@ -1454,8 +1454,16 @@ select
     background-color #3c7cc6
     z-index: 1
     color: #fff
-    &>*
-      margin: 8vh 0
+
+    .flexbox &
+      display: flex
+      flex-direction column
+      justify-content: space-around
+      align-items center
+
+    .no-flexbox &
+      &>*
+        margin: 5vh 0
 
   .this__column--rt
     position relative
@@ -1469,9 +1477,12 @@ select
 
   .this__name
     img('logo-main.png')
-    height: 65px
+    size 158px 65px
     text-align: center;
-    hide-text()
+    font: 0/0 serif;
+    .no-flexbox &
+      margin-left: auto
+      margin-right: auto
 
   .this__slogan
     font-size 40px
@@ -1561,35 +1572,28 @@ select
 
 
 
-
   .this__main__section
     padding-left: 50px
     min-height: 730px
-    clearfix()
     .flexbox &
       display flex
       flex-direction column
-      justify-content space-around
+      justify-content center
       align-items center
       flex 1
 
     .no-flexbox &
-      display block
+      padding-top: 20vh
 
 
   .this__device
     size 100% 50%
     text-align: center
+    margin: 0 auto 5vh
     img
       display inline-block
       max-width 100%
       max-height: 100%
-
-    .flexbox &
-      margin: 0 auto
-
-    .no-flexbox &
-      margin: 5vh auto
 
 
   .this__device--1
@@ -1597,6 +1601,7 @@ select
     text-align: right
 
   .this__feature
+    transform scale(.8)
     margin: 30px auto
     width: 440px
     font-size: 18px
@@ -1608,24 +1613,6 @@ select
       border-right 1px solid #999
       background-repeat no-repeat
       background-position 50% 50%
-  /*
-
-    +b-max(1200px)
-      .this__feature--find,
-      .this__feature--connect
-        top: -35px
-
-      .this__feature--press
-        top -50px
-
-    +ipad-land-retina()
-      .this__feature--find,
-      .this__feature--connect
-        top: -35px
-
-      .this__feature--press
-        top -50px
-  */
 
   for $i in membership find connect message press
     .this__feature--{$i}:before
@@ -1664,7 +1651,8 @@ select
     width calc(100% \- 70px)
 
   .this__login
-    fixed right 20px top
+    absolute right 20px top 8vh
+    border red
     width: 100%
     z-index: 100;
     text-align: right;
@@ -1721,13 +1709,10 @@ select
 
   .this__copyright
     display block
-    fixed right bottom
-    width: 100%
+    text-align: center;
     z-index: 100;
-    text-align: right;
-    color #999
+    color #fff
     font-size 12px
-    font-weight 700
     padding: 5px
 
 
@@ -1736,8 +1721,6 @@ select
 	-------------------------------------------------- */
 .main-page-body {
   margin: 0;
-  -webkit-transition: opacity 400ms;
-  -moz-transition: opacity 400ms;
   transition: opacity 400ms;
   overflow-y hidden
 }
@@ -1756,7 +1739,7 @@ select
   display: block;
   position: relative;
   padding: 0;
-  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
 .onepage-wrapper .section {
@@ -1805,10 +1788,7 @@ select
   top: auto !important;
 }
 .disabled-onepage-scroll .onepage-wrapper {
-  -webkit-transform: none !important;
-  -moz-transform: none !important;
   transform: none !important;
-  -ms-transform: none !important;
   min-height: 100%;
 }
 
@@ -2161,7 +2141,6 @@ select
 
 
 .modal-almostDone
-
   .this__textareaSection
     margin-bottom: 40px
 
